--- a/AdvancedAutomation10_30/test-output/emailable-report.html
+++ b/AdvancedAutomation10_30/test-output/emailable-report.html
@@ -9,10 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">25,471</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,894</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">login.TC_01_Test</td><td><a href="#m0">launchingFlipkart</a></td><td rowspan="1">1699088666596</td><td rowspan="1">4083</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">login.DWS_Login_01_Test</td><td><a href="#m0">Login_to_application_with_valid_credentials</a></td><td rowspan="2">1699267175737</td><td rowspan="2">2950</td></tr><tr class="passedeven"><td><a href="#m1">Login_to_application_with_valid_credentials</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">login.TC_01_Test#launchingFlipkart</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">login.DWS_Login_01_Test#Login_to_application_with_valid_credentials</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>sql@gmail.com</td><td>Selenium</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">login.DWS_Login_01_Test#Login_to_application_with_valid_credentials</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>Selenium@gmail.com</td><td>1234ABC</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
