--- a/AdvancedAutomation10_30/test-output/index.html
+++ b/AdvancedAutomation10_30/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse--1798295302\testng-customsuite.xml</span>
+                    <span>C:\Users\User\AppData\Local\Temp\testng-eclipse--77284593\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="login.TC_01_Test" class="method navigator-link" hash-for-method="launchingFlipkart">launchingFlipkart</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="login.DWS_Login_01_Test" class="method navigator-link" hash-for-method="Login_to_application_with_valid_credentials(sql@gmail.com, Selenium)">Login_to_application_with_valid_credentials(sql@gmail.com, Selenium)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="login.DWS_Login_01_Test" class="method navigator-link" hash-for-method="Login_to_application_with_valid_credentials(Selenium@gmail.com, 1234ABC)">Login_to_application_with_valid_credentials(Selenium@gmail.com, 1234ABC)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +127,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">login.TC_01_Test</span>
+              <span class="class-name">login.DWS_Login_01_Test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="launchingFlipkart">
-                  </a> <!-- launchingFlipkart -->
-                  <span class="method-name">launchingFlipkart</span>
+                  <a name="Login_to_application_with_valid_credentials(sql@gmail.com, Selenium)">
+                  </a> <!-- Login_to_application_with_valid_credentials(sql@gmail.com, Selenium) -->
+                  <span class="method-name">Login_to_application_with_valid_credentials</span>
+                  <span class="parameters">(sql@gmail.com, Selenium)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="Login_to_application_with_valid_credentials(Selenium@gmail.com, 1234ABC)">
+                  </a> <!-- Login_to_application_with_valid_credentials(Selenium@gmail.com, 1234ABC) -->
+                  <span class="method-name">Login_to_application_with_valid_credentials</span>
+                  <span class="parameters">(Selenium@gmail.com, 1234ABC)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +151,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse--1798295302\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\User\AppData\Local\Temp\testng-eclipse--77284593\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +160,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;login.TC_01_Test&quot;/&gt;
+      &lt;class name=&quot;login.DWS_Login_01_Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,16 +200,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'launchingFlipkart')
-data.setCell(0, 2, 'login.TC_01_Test')
-data.setCell(0, 3, 4083);
+data.setCell(0, 1, 'Login_to_application_with_valid_credentials')
+data.setCell(0, 2, 'login.DWS_Login_01_Test')
+data.setCell(0, 3, 2950);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'Login_to_application_with_valid_credentials')
+data.setCell(1, 2, 'login.DWS_Login_01_Test')
+data.setCell(1, 3, 2332);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,26 +239,38 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">login.TC_01_Test</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">login.DWS_Login_01_Test</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">launchingBrowserAndNavigateToApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">loginToApplication</span>
-                <span class="method-start">20415 ms</span>
+                <span class="method-start">28741 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">launchingFlipkart</span>
-                <span class="method-start">20460 ms</span>
+                <span class="method-name">Login_to_application_with_valid_credentials(Selenium@gmail.com, 1234ABC)</span>
+                <span class="method-start">28777 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logoutFromApplication</span>
-                <span class="method-start">24556 ms</span>
+                <span class="method-start">31115 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">loginToApplication</span>
+                <span class="method-start">31116 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">Login_to_application_with_valid_credentials(sql@gmail.com, Selenium)</span>
+                <span class="method-start">31118 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">logoutFromApplication</span>
+                <span class="method-start">34071 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">teardownTheBrowser</span>
-                <span class="method-start">24558 ms</span>
+                <span class="method-start">34074 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
