--- a/AdvancedAutomation10_30/test-output/old/Default suite/classes.html
+++ b/AdvancedAutomation10_30/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>login.TC_01_Test</td>
+<td>login.DWS_Login_01_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>launchingFlipkart</td>
+<td>Login_to_application_with_valid_credentials</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
