--- a/AdvancedAutomation10_30/test-output/old/Default suite/methods.html
+++ b/AdvancedAutomation10_30/test-output/old/Default suite/methods.html
@@ -1,14 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7a85e1">  <td>23/11/04 14:34:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutFromApplication()[pri:0, instance:login.TC_01_Test@55634720]">&lt;&lt;logoutFromApplication</td> 
-<td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
-<tr bgcolor="b9e78c">  <td>23/11/04 14:34:26</td>   <td>-4096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_Test.launchingFlipkart()[pri:0, instance:login.TC_01_Test@55634720]">launchingFlipkart</td> 
-  <td>main@564272228</td>   <td></td> </tr>
-<tr bgcolor="7a85e1">  <td>23/11/04 14:34:06</td>   <td>-24550</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchingBrowserAndNavigateToApp()[pri:0, instance:login.TC_01_Test@55634720]">&gt;&gt;launchingBrowserAndNavigateToApp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
-<tr bgcolor="7a85e1">  <td>23/11/04 14:34:26</td>   <td>-4141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApplication()[pri:0, instance:login.TC_01_Test@55634720]">&gt;&gt;loginToApplication</td> 
-<td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
-<tr bgcolor="7a85e1">  <td>23/11/04 14:34:30</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownTheBrowser()[pri:0, instance:login.TC_01_Test@55634720]">&lt;&lt;teardownTheBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@564272228</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutFromApplication()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&lt;&lt;logoutFromApplication</td> 
+<td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.logoutFromApplication()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&lt;&lt;logoutFromApplication</td> 
+<td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="b9e78c">  <td>23/11/06 16:09:35</td>   <td>-2954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DWS_Login_01_Test.Login_to_application_with_valid_credentials(java.lang.String,java.lang.String)[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">Login_to_application_with_valid_credentials</td> 
+  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:35</td>   <td>-2954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApplication()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&gt;&gt;loginToApplication</td> 
+<td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:35</td>   <td>-2954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.loginToApplication()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&gt;&gt;loginToApplication</td> 
+<td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:38</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardownTheBrowser()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&lt;&lt;teardownTheBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="b9e78c">  <td>23/11/06 16:09:35</td>   <td>-2954</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DWS_Login_01_Test.Login_to_application_with_valid_credentials(java.lang.String,java.lang.String)[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">Login_to_application_with_valid_credentials</td> 
+  <td>main@125844477</td>   <td></td> </tr>
+<tr bgcolor="7a85e1">  <td>23/11/06 16:09:04</td>   <td>-34068</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchingBrowserAndNavigateToApp()[pri:0, instance:login.DWS_Login_01_Test@4b0d79fc]">&gt;&gt;launchingBrowserAndNavigateToApp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@125844477</td>   <td></td> </tr>
 </table>
